[package]
name = "solana-bls-alt-bn128"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ark-bn254 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5.0", optional = true }
ark-ff = { version = "0.5.0", optional = true }
ark-serialize = { version = "0.5.0", optional = true }
dashu = "0.4.2"
solana-nostd-sha256 = "0.1.3"
solana-bn254 = "2.1.0"
hex = "0.4.3"

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }