[package]
name = "solana-alt-bn128-bls"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.0"
description = "BLS signatures over the Alt-BN128 curve for Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
dashu = "0.4.2"
solana-nostd-sha256 = "0.1.3"
solana-bn254 = "2.1.0"
num = "0.4.3"
ark-bn254 =  "0.5.0"
ark-ec =  "0.5.0"
ark-ff = "0.5.0"
ark-serialize =  "0.5.0"
rand =  "0.8.5"

