[package]
name = "solana-alt-bn128-bls-test"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-alt-bn128-bls = { path = "../" }
pinocchio = "0.6.0"

[dev-dependencies]
mollusk-svm = "0.0.11"
solana-sdk = "2.1.0"